kubernetes/platform/docs-public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-public
  namespace: docs-public
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - docs.aetheriscloud.fr
      secretName: docs-aetheriscloud-fr-tls
  rules:
    - host: docs.aetheriscloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs-public
                port:
                  number: 80
